carpetas y paquetes instalados, además de eslint configurado

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,13 @@
     "react/jsx-uses-react": ["off"],
     "react/react-in-jsx-scope": ["off"],
     "react/jsx-props-no-spreading": ["warn"],
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": ["arrow-function", "function-declaration"]
+      }
+    ],
+    "prettier/prettier": ["off"],
     "no-shadow": "off"
   }
 }
