--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.14.3",
+    "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.1.3",
+    "gridjs-react": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "styled-components": "^5.3.6",
-    "vite": "^3.2.0",
-    "@vitejs/plugin-react": "^2.2.0"
+    "vite": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
@@ -34,7 +35,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "prettier": "^2.7.1"
   }
 }
