--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.1.3",
     "gridjs-react": "^5.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -24,8 +26,10 @@
     "vite": "^3.2.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@vitest/coverage-c8": "^0.24.5",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -35,7 +39,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "happy-dom": "^7.6.6",
     "husky": "^8.0.0",
-    "prettier": "^2.7.1"
+    "jest": "^29.2.2",
+    "prettier": "^2.7.1",
+    "vitest": "^0.24.5"
   }
 }
