grid js, home page, registros, inicio y mapa

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
         "namedComponents": ["arrow-function", "function-declaration"]
       }
     ],
+    "react/forbid-prop-types": ["off"],
     "prettier/prettier": ["off"],
     "no-shadow": "off"
   }
