--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@tanstack/react-query": "^4.14.3",
     "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.1.3",
+    "gridjs": "^5.1.0",
     "gridjs-react": "^5.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-router-dom": "^6.4.3",
     "styled-components": "^5.3.6",
-    "vite": "^3.2.0"
+    "vite": "^3.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
