--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.14.3",
     "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.1.3",
@@ -24,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "vite": "^3.2.0",
     "yup": "^0.32.11"
