--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.14.3",
+    "@tanstack/react-query-devtools": "^4.16.1",
     "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.1.3",
     "gridjs": "^5.1.0",
