--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "axios": "^1.1.3",
     "gridjs": "^5.1.0",
     "gridjs-react": "^5.1.0",
+    "leaflet": "^1.9.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
+    "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
