--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gridjs": "^5.1.0",
     "gridjs-react": "^5.1.0",
     "leaflet": "^1.9.2",
+    "leaflet-routing-machine": "^3.2.12",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
